# nhl-standings

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: extract.py  load.py  main.py  model.py  transform.py
templates/: index.html
